nginx-svc-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-nginx-svc
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: nginx-web
