httpgw-web.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-http-gw
  namespace: web
spec:
  addresses:
  - type: "IPAddress"
    value: 192.168.48.201
  gatewayClassName: f5-gateway-class
  listeners:
  - name: nginx
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: "All"
      kinds:
      - kind: HTTPRoute
